--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "table2stl": "node ./demo/table.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "table2stl": "bin/table2stl.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/r1000ru/stl-creator.git"
